@@ -1,4 +1,8 @@
-# 13 Sep 2010; A.Vinogradov <spamslepnoga@inbox.ru>
+#16 Sep 2010; A.Vinogradov <spamslepnoga@inbox.ru>
+# again mask otrs - incomplit deps
+>=www-apps/otrs-3.0
+
+#13 Sep 2010; A.Vinogradov <spamslepnoga@inbox.ru>
 #mask for work failures
 app-crypt/openca-base
 app-crypt/openca
