@@ -5,10 +5,14 @@ AUX postinstall-en-2.txt 661 RMD160 ea269ff2e998784b66642e89ab711a3055c9cf8f SHA
 AUX postinstall-ru-2.txt 20 RMD160 b58675303eaeb6138797435019e4328be0660a40 SHA1 ceb8bef9fff21bb5cc82a71a037b734967c66987 SHA256 7c3e9b86c22c79fee506a572531ea937c47529e0d8ffaaf7b7d8e386f758fd33
 AUX reconfig-2 880 RMD160 eb71fbb7b086e60e648f06828353baf9b3f8bec7 SHA1 442203fc0694b9591ee21baababc697c31ad65e4 SHA256 f08ef6e1258bb64d77fbf34bad33eee2e8556580509706eb17cbd2ae079e0a29
 AUX reconfig-3 1058 RMD160 d969dac6423a0e3ba545c66fd61be298d2f014a2 SHA1 f6c026c84cab7c636768006458c30ac7ff64cb7e SHA256 a696857f52fde091a6583a4fe2d61a4492bfbbea9f09f03560351a91d6a030be
+DIST otrs-2.3.6.tar.bz2 11677703 RMD160 824fc9f0a24f383dd71f5ce0bdfeca547a56cca3 SHA1 a1e2daa11e4873f192b831c24d0c4c64da2d86d0 SHA256 db6a4d4fdc65ec5ca748ddf24e210cd1e5e53c09d4df15a0a0244f7a34d1f039
 DIST otrs-2.4.7.tar.bz2 14292355 RMD160 5427ee356ab54951137fa3284df96ad9ddbeca5d SHA1 63d41a32bdae2462922081b30e25baffaaa4478a SHA256 0de2711e3680392461c233aaed22b38bb29745af22435427b015586ee19848ce
+DIST otrs-2.4.8.tar.bz2 14963771 RMD160 873e458c43ac27a85d43d0354b757d5e317ac593 SHA1 7b0a3477fed6ba056c9fdc5ce516b6a7ca4f5e26 SHA256 144b9a0e09671f44ff714b725cbaef8f4405ddb9ef83115bcfd4d81f1fa23dad
 DIST otrs-3.0.0-beta3.tar.bz2 15501058 RMD160 e001336f79d0661dd16a314a696a1f00c4e5e0ba SHA1 d4e45874b4a08f8784401d40559ab2d75d020fdc SHA256 f5c4f2254e20ea07c469c38e6bb2e2e16f1aecc2a63f33bea903be01ac4d3490
-EBUILD otrs-2.4.7.ebuild 3188 RMD160 26a3d9f156d0ae59b75425ffb007e1d7373592ae SHA1 757e7b6b58ebeca78c45eb5eb65d8281683210ee SHA256 70303d37134970cfce3bb63925b07d1ff930bebfe444d257a890dddf61782ddf
-EBUILD otrs-3.0.0_beta3.ebuild 3352 RMD160 3548eb4913b8aa774bf42ab1a58fa7d9793597f0 SHA1 b5004b12d5fdb1fb696406d4f0bd3b023eae25ab SHA256 1f8e3712d4024272d7ef60b6a07dc64efae76395bac6e136e60042f45dbeff03
-MISC ChangeLog 1922 RMD160 308eee757550c203b8e2d7a77eea3fbfd2cae406 SHA1 d324f91d8f6a6472e58c28597ab991ee528f2a75 SHA256 3f1636d646e3166572d1103219556ccf572d0a1bc8c5da6ada94ea8f7be1ee1f
+EBUILD otrs-2.3.6.ebuild 3009 RMD160 b06ebb30348b6d9e00d9b7b56257ccd28263d1e3 SHA1 9bb28b03b5e6da5bc91f3c6ab7464e73e8158f9a SHA256 8bbf062a1cf230e72ddc2ae2481828527e63b0433f78a9dd6369602ca30c78d2
+EBUILD otrs-2.4.7.ebuild 3214 RMD160 e84b00fd50486b9c44503190158890a5f4789c77 SHA1 49e96d08be96e0e8a0d049ce6d9bb3515d7f2b7c SHA256 4a1596619376b61e472882081d082bca4d77e2faf7ac21a5cbc3826113941c2c
+EBUILD otrs-2.4.8.ebuild 3205 RMD160 f3e1671c16c54eecaa27b267c7d358be38d0bb78 SHA1 ba80c12a1017753353bae559a35f03a7e29c4b61 SHA256 bf571a24b79a049a47c99014e959ef42a35c3e0b23709966e18122572ca7351b
+EBUILD otrs-3.0.0_beta3.ebuild 3615 RMD160 c9402b1e48fd04e6613a6b92f92e2b82d3ae30bb SHA1 167a596c1188f56c6c625d485c33d34e8db398d7 SHA256 99d9af2318d9db1cbd5481060316bfcb7aa8b7a34f01797dbc3885b15aece3d5
+MISC ChangeLog 2375 RMD160 23ae8416d81450097bde1459fd21974d1f30425c SHA1 d5032544092ccaa198de8230906e2898c7f31a28 SHA256 aec1cfc41cc227468a055e15469b65c6d9e8bf0af48f59e6f99d5c9c1b4693bf
 MISC metadata.xml 206 RMD160 8dd7de79a9a1b903beddcd34cfaff09a75116392 SHA1 bbd1a4893458a7c784bec14353fbc79b69ee9a2f SHA256 8d5d94477eedf2db244efcce8f1c9ab36e01e6674a93e8e57581c305c4c34977
 MISC postinstall-ru-2.txt 1306 RMD160 d6657c57cd05d30d37dd57a40b9564fad66eaffb SHA1 af10ee3926084fdf20a9f86209635f92afc8ba99 SHA256 548e1584c6c05dc37b3aa6cfca08881a8875d6571cb346b63ce1772ef5b39cb2
