@@ -2,6 +2,18 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> +otrs-2.3.6.ebuild,
+  otrs-2.4.7.ebuild, +otrs-2.4.8.ebuild, otrs-3.0.0_beta3.ebuild:
+  add 2.3.6 for security reason
+
+  16 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> +otrs-2.3.6.ebuild,
+  otrs-2.4.7.ebuild, +otrs-2.4.8.ebuild, otrs-3.0.0_beta3.ebuild:
+  bump
+
+  16 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> otrs-2.4.7.ebuild,
+  +otrs-2.4.8.ebuild, otrs-3.0.0_beta3.ebuild:
+  bump and QA
+
   14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +files/postinstall-ru-2.txt, +postinstall-ru-2.txt:
   fix install
